[gd_scene load_steps=11 format=2]

[ext_resource path="res://5.1 sprites/sprites/bulletRed1_outline.png" type="Texture" id=1]
[ext_resource path="res://scenes/smoke.tscn" type="PackedScene" id=2]
[ext_resource path="res://5.1 sprites/sprites/explosion5.png" type="Texture" id=3]
[ext_resource path="res://5.1 sprites/sprites/explosion1.png" type="Texture" id=4]
[ext_resource path="res://5.1 sprites/sprites/explosion4.png" type="Texture" id=5]
[ext_resource path="res://5.1 sprites/sprites/explosion3.png" type="Texture" id=6]
[ext_resource path="res://5.1 sprites/sprites/explosion2.png" type="Texture" id=7]
[ext_resource path="res://scripts/bullet.tres.gd" type="Script" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 6.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ null, ExtResource( 4 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), null ],
"loop": false,
"name": "explode",
"speed": 10.0
} ]

[node name="bullet" type="Area2D" groups=["grupo 01"]]
collision_layer = 8
collision_mask = 38
script = ExtResource( 9 )

[node name="smoke" parent="." instance=ExtResource( 2 )]

[node name="sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.5, 1.78814e-07 )
scale = Vector2( 0.65, 0.3 )

[node name="anim_self_destruction" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "explode"

[connection signal="area_entered" from="." to="." method="_on_bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
